row too big when log level is warning fix (not on every computer)

--- a/src/app/nlog/nlog.component.css
+++ b/src/app/nlog/nlog.component.css
@@ -11,7 +11,7 @@
 }
 
 .log-level-column {
-    width: 120px;
+    width: 125px;
 }
 
 .log-level-text {
